creating java doc and erase MinMaxAI