@@ -1,21 +1,52 @@
 import java.util.Comparator;
 import java.util.List;
 
+/**
+ * GreedyAI is an AIPlayer that makes moves based on a greedy strategy.
+ * It evaluates possible positions based on the maximum number of flips,
+ * prioritizing moves that result in higher flips, higher column values,
+ * and higher row values in descending order.
+ */
 public class GreedyAI extends AIPlayer {
+
+    /**
+     * Constructs a GreedyAI player.
+     *
+     * @param isPlayerOne true if this AI is player one, false otherwise.
+     */
     public GreedyAI(boolean isPlayerOne) {
         super(isPlayerOne);
     }
-    //Comparator
-    public class PositionCompare implements Comparator<Position> {
+
+    /**
+     * Comparator for comparing positions based on the number of flips
+     * and secondary criteria like column and row values.
+     */
+    public static class PositionCompare implements Comparator<Position> {
         private final PlayableLogic gameStatus;
 
+        /**
+         * Constructs a PositionCompare object.
+         *
+         * @param gameStatus the current game logic object that provides
+         *                   information about valid moves and flips.
+         */
         public PositionCompare(PlayableLogic gameStatus) {
             this.gameStatus = gameStatus;
         }
-        // Number of flips for each position
+
+        /**
+         * Compares two positions based on their potential flips, column, and row values.
+         *
+         * @param pos1 the first position to compare.
+         * @param pos2 the second position to compare.
+         * @return a negative integer if pos1 is "better", a positive integer if pos2 is "better",
+         *         or zero if they are equal based on the criteria.
+         */
+        @Override
         public int compare(Position pos1, Position pos2) {
-            int flips1 =gameStatus.countFlips(pos1);
-            int flips2 =gameStatus.countFlips(pos2);
+            int flips1 = gameStatus.countFlips(pos1);
+            int flips2 = gameStatus.countFlips(pos2);
             // Primary comparison: by number of flips (higher is better)
             if (flips1 != flips2) {
                 return Integer.compare(flips2, flips1);
@@ -26,10 +57,16 @@ public class GreedyAI extends AIPlayer {
             }
             // Tertiary comparison: by the highest row
             return Integer.compare(pos2.row(), pos1.row());
-
         }
     }
 
+    /**
+     * Makes a move based on the greedy strategy.
+     *
+     * @param gameStatus the current state of the game providing available moves
+     *                   and game logic.
+     * @return the best move chosen by the AI or null if no legal moves are available.
+     */
     @Override
     public Move makeMove(PlayableLogic gameStatus) {
         List<Position> validMoves = gameStatus.ValidMoves();
@@ -40,7 +77,7 @@ public class GreedyAI extends AIPlayer {
         validMoves.sort(new PositionCompare(gameStatus));
 
         // Choose the best move (the first in the list)
-        Position bestMove = validMoves.get(0);
+        Position bestMove = validMoves.getFirst();
 
         Disc simpleDisc = new SimpleDisc(this);
 
